--- a/数据结构/分治法.md
+++ b/数据结构/分治法.md
@@ -12,7 +12,7 @@
 
 2. **解决**
 
-   这些子问题，递归地求解各子问题。然而，若子问题的规模足够小，直接求解
+   这些子问题，递归地求解各子问题。然而，若子问题的规模足够小，直接求解（**递归触底，进入基本情况**）
 
 3. **合并**
 
@@ -20,3 +20,10 @@
 
 
 
+三种求解递归式
+
+代入法
+
+递归树法
+
+主方法
