--- a/数据结构/归并排序.md
+++ b/数据结构/归并排序.md
@@ -29,9 +29,6 @@
 链表中节点的数目在范围 [0, 5 * 104] 内
 -105 <= Node.val <= 105
 
-来源：力扣（LeetCode）
-链接：https://leetcode-cn.com/problems/sort-list
-
 自顶向下的写法
 
 ```java
@@ -91,3 +88,12 @@ class Solution {
 空间复杂度：O(logn)，其中 n是链表的长度。空间复杂度主要取决于递归调用的栈空间。
 
 自底向上的写法
+
+
+
+
+
+
+
+#### [剑指 Offer 51. 数组中的逆序对](https://leetcode-cn.com/problems/shu-zu-zhong-de-ni-xu-dui-lcof/)
+
