--- a/数据结构/堆排序.md
+++ b/数据结构/堆排序.md
@@ -2,7 +2,11 @@
 
 ## 堆的数据结构
 
+逻辑结构就是一棵二叉树，存储结构一般是数组
 
+一般都用数组来表示堆，i结点的父结点下标就为(i–1)/2。它的左右子结点下标分别为2 * i + 1和2 * i + 2。如第0个结点左右子结点下标分别为1和2。
+
+![](https://github.com/cjqbaba/work/blob/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/img/%E5%A0%86%E7%9A%84%E7%BB%93%E6%9E%84.png)
 
 ## 大根堆
 
@@ -14,3 +18,33 @@ A[PARENT(i)]<= A[i]
 
 最小堆通常用于构造优先队列
 
+
+
+## 维护堆
+
+```c
+MAX-HEAPIFY(A,i)
+    l = LEFT(i)
+    r = RIGHT(i)
+    if l<= A.heap-size and A[l]>A[i]
+        largest = l
+    else largest = i;
+	if r<= A.heap-size and A[r]>A[largest]
+        largest = r
+    if largest!=i
+        exchange A[i] with A[largest]
+        MAX-HEAPIFY(A,largest)
+```
+
+![](https://github.com/cjqbaba/work/blob/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/img/%E7%BB%B4%E6%8A%A4%E5%A0%86.png)
+
+## 建堆
+
+```c
+BUILD-MAX-HEAP(A)
+    A.heap-size = A.length
+    for int i = A.length/2 downto 1
+        MAX-HEAPIFY(A,i)
+```
+
+![](https://github.com/cjqbaba/work/blob/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/img/%E5%BB%BA%E5%A0%86.png)
