--- a/数据结构/堆排序.md
+++ b/数据结构/堆排序.md
@@ -48,3 +48,31 @@ BUILD-MAX-HEAP(A)
 ```
 
 ![](https://github.com/cjqbaba/work/blob/main/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/img/%E5%BB%BA%E5%A0%86.png)
+
+## 堆排序
+
+```c
+HEAPSORT(A)
+    BUILD-MAX-HEAP(A)
+    for i = A.length down to 2
+        exchange A[1] with A[i]
+        A.heap-size = A.heap-size -1
+        MAX-HEAPIFY(A,1)
+```
+
+![]()
+
+## 优先队列priority queue
+
+一种用来维护由一组元素构成的集合S的数据结构其中的二秘阁元素都有一个相关的值，称为关键字（key）。
+
+最大优先队列支持：
+
+INSERT(S,x):
+
+MAXIMUM(S):
+
+EXTRACT-MAX(S)
+
+INCREACT-KEY(S,x,k):
+
