"新增问题收集"

--- a/数据结构/动态规划.md
+++ b/数据结构/动态规划.md
@@ -2,3 +2,23 @@
 
 动态规划的原理
 
+1.刻画一个最优解的结构特征
+
+2.递归地定义最优解的值
+
+3.计算最优解的值，通常采用自底向上的方法。
+
+4.利用计算出的信息构造一个最优解
+
+## 带备忘的自顶向下
+
+递归编写，用数组或者散列表保存每个子问题的解
+
+## 自底向上
+
+
+
+
+
+## 最长公共子序列
+
